# 8085-Microprocessor-Simulator

./: CMakeLists.txt  README.md  compile_flags.txt  notes
include/: app_controller.hpp  code_graph.hpp  model.hpp  ui_builder.hpp  utils.hpp  view.hpp
include/instructions/: adc.hpp  add.hpp  command.hpp  dcr.hpp  dcx.hpp  inr.hpp  invalid.hpp  inx.hpp  mov.hpp  mvi.hpp  sbb.hpp  sub.hpp
src/: 8085_main.cpp  app_controller.cpp  code_graph.cpp  command.cpp  grid_test.cpp  model.cpp  ui_builder.cpp  utils.cpp  view.cpp
src/include/: app_controller.hpp  command.hpp  model.hpp  ui_builder.hpp  utils.hpp  view.hpp  view_ui.hpp
src/instructions/: adc.cpp  add.cpp  command.cpp  dcr.cpp  dcx.cpp  inr.cpp  invalid.cpp  inx.cpp  mov.cpp  mvi.cpp  sbb.cpp  sub.cpp
